force-app/src/objects/c2g__codaPurchaseInvoice__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppurchaseinvoice</customHelpPage>
    <description>Holds information that applies to the whole payable invoice such as vendor information and due date.</description>
    <fields>
        <fullName>CTCM__VendorBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Bank Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>CTCM__Vendor_Bank_Account__c.CTCM__Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.c2g__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CTCM__Vendor_Bank_Account__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>Payable_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTPISA__BookingCapture__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Scan</label>
        <referenceTo>CTPISA__BookingCapture__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>Payable_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountAddress__c</fullName>
        <formula>c2g__Account__r.BillingStreet + &apos; &apos; + c2g__Account__r.BillingCity + &apos; &apos; + c2g__Account__r.BillingState + &apos; &apos; + c2g__Account__r.BillingPostalCode + &apos; &apos; + c2g__Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountECCountryCode__c</fullName>
        <formula>TEXT(c2g__Account__r.c2g__CODAECCountryCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountInvoiceNumber__c</fullName>
        <description>The vendor reference.</description>
        <label>Vendor Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AvalaraVATReportingDocumentIndicator__c</fullName>
        <description>Document indicator required for the Avalara VAT Reporting integration. If blank, &quot;1 - Invoice&quot; is used.</description>
        <inlineHelpText>Document indicator required for the Avalara VAT Reporting integration. If blank, &quot;1 - Invoice&quot; is used.</inlineHelpText>
        <label>Avalara VAT Reporting Document Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Invoice</fullName>
                </value>
                <value>
                    <fullName>2 - Simplified Invoice</fullName>
                </value>
                <value>
                    <fullName>3 - Ticket</fullName>
                </value>
                <value>
                    <fullName>4 - Advance Payment</fullName>
                </value>
                <value>
                    <fullName>5 - Canceled Invoice</fullName>
                </value>
                <value>
                    <fullName>6 - Receipts - Italy</fullName>
                </value>
                <value>
                    <fullName>7 - Summary Invoice</fullName>
                </value>
                <value>
                    <fullName>8 - Simplified Invoice with Partner Details - Spain</fullName>
                </value>
                <value>
                    <fullName>9 - Regular Invoice without Partner Information - Spain</fullName>
                </value>
                <value>
                    <fullName>10 - Customs - Customs additional Assessment - Spain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CopyAccountValues__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, retrieves the available details from the selected account.</description>
        <label>Derive Details from Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, sets the document&apos;s currency to home currency in a single-currency org or to the currency of the selected account in a multi-currency org.</description>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, derives the due date of this document from the invoice date and the vendor account&apos;s credit terms.</description>
        <label>Derive Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If selected, derives the period of this document based on the document&apos;s date.</description>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <description>The reason this Payable Invoice was discarded.</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <description>The date the payable invoice is due for payment.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__EInvoiceExternalIdentifier__c</fullName>
        <description>Used to uniquely identify the e-invoice in the Storecove system.</description>
        <inlineHelpText>A number generated by Storecove to uniquely identify the e-invoice in the Storecove system.</inlineHelpText>
        <label>E-Invoice External Unique Identifier</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__EInvoiceProcessingStatus__c</fullName>
        <description>Picklist to specify the received e-invoice stages from acknowledged to accepted.</description>
        <inlineHelpText>Status of the inbound e-invoice.</inlineHelpText>
        <label>E-Invoice Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__EnableReverseCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Reverse Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExpenseLineCount__c</fullName>
        <label>Expense Line Count</label>
        <summaryForeignKey>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExpensesNetTotal__c</fullName>
        <description>Total value of expense items on the invoice, before tax.
SUM: Payable Invoice Expense Line Item: NetValue</description>
        <label>Expenses Net Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__NetValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExpensesOutputTaxTotal__c</fullName>
        <label>Expenses Output Tax Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__OutputTaxValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExpensesTax1Total__c</fullName>
        <description>Sum of tax 1 posted to Expense Line Items.</description>
        <label>Expenses Tax 1 Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__TaxValue1__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExpensesTax2Total__c</fullName>
        <description>Sum of tax 2 posted to Expense Line Items.</description>
        <label>Expenses Tax 2 Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__TaxValue2__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__HoldStatus__c</fullName>
        <label>Hold Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rents</fullName>
                </value>
                <value>
                    <fullName>2 - Royalties</fullName>
                </value>
                <value>
                    <fullName>3 - Other Income</fullName>
                </value>
                <value>
                    <fullName>4 - Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 - Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 - Medical and Healthcare Payments</fullName>
                </value>
                <value>
                    <fullName>7 - Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
                </value>
                <value>
                    <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
                </value>
                <value>
                    <fullName>10 - Crop Insurance Proceeds</fullName>
                </value>
                <value>
                    <fullName>11 - Unused 11</fullName>
                </value>
                <value>
                    <fullName>12 - Unused 12</fullName>
                </value>
                <value>
                    <fullName>13 - Excess Golden Parachute Payments</fullName>
                </value>
                <value>
                    <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
                </value>
                <value>
                    <fullName>Not Reportable</fullName>
                    <default>true</default>
                    <label>Not Reportable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceCurrencyDecimalPlaces__c</fullName>
        <defaultValue>2</defaultValue>
        <description>The number of decimal places used by the invoice currency. Permitted values are 0 and 2. The default is 2.</description>
        <label>Currency Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The date the payable invoice was created.</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceDescription__c</fullName>
        <description>A description of the payable invoice.</description>
        <label>Invoice Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Invoice Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceStatus__c</fullName>
        <description>The current status of the payable invoice.</description>
        <label>Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Ready to Post</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__InvoiceTotal__c</fullName>
        <description>The total value of all items and expenses on the payable invoice, including the tax.</description>
        <formula>c2g__NetTotal__c  +  c2g__TaxTotal__c + c2g__WithholdingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ItemsNetTotal__c</fullName>
        <description>Total value of product items on the invoice, before tax.
SUM: Payable Invoice Line Item: NetValue</description>
        <label>Items Net Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceLineItem__c.c2g__NetValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseInvoiceLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ItemsOutputTaxTotal__c</fullName>
        <label>Items Output Tax Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceLineItem__c.c2g__OutputTaxValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseInvoiceLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ItemsTax1Total__c</fullName>
        <description>Sum of tax 1 posted to Product Line Items.</description>
        <label>Items Tax 1 Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceLineItem__c.c2g__TaxValue1__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseInvoiceLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__ItemsTax2Total__c</fullName>
        <description>Sum of tax 2 posted to Product Line Items.</description>
        <label>Items Tax 2 Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceLineItem__c.c2g__TaxValue2__c</summarizedField>
        <summaryForeignKey>c2g__codaPurchaseInvoiceLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <formula>TEXT(c2g__Transaction__r.c2g__MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NetTotal__c</fullName>
        <description>The total value of items and expenses on the puchase invoice, before tax.</description>
        <formula>c2g__ItemsNetTotal__c  +  c2g__ExpensesNetTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OutstandingValue__c</fullName>
        <formula>c2g__Transaction__r.c2g__DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( c2g__InvoiceStatus__c, &apos;Complete&apos; ) ),
$Label.c2g__NotApplicable,
if( c2g__Transaction__r.c2g__DocumentOutstandingTotal__c == 0, $Label.c2g__Paid,
if( c2g__Transaction__r.c2g__DocumentTotal__c == c2g__Transaction__r.c2g__DocumentOutstandingTotal__c, $Label.c2g__codaPurchaseInvoiceFieldStatusUnpaid,
$Label.c2g__codaPurchaseInvoiceFieldStatusPartPaid ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ProductLineCount__c</fullName>
        <label>Product Line Count</label>
        <summaryForeignKey>c2g__codaPurchaseInvoiceLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Reference1__c</fullName>
        <label>Reference 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Reference2__c</fullName>
        <label>Reference 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RegisteredDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Registered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ScannedPayableDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Scanned Payable Document associated with the Payable Invoice created.</description>
        <label>Scanned Payable Document</label>
        <referenceTo>fferpcore__ScannedPayableDocument__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoices (Tax Code)</relationshipLabel>
        <relationshipName>PurchaseInvoicesTaxCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxDocumentCode__c</fullName>
        <label>External Tax Document Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__TaxStatus__c</fullName>
        <description>Tax status of the invoice.</description>
        <label>External Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Calculated</fullName>
                    <default>true</default>
                    <label>Not Calculated</label>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TaxTotal__c</fullName>
        <formula>c2g__ItemsTax1Total__c  +  c2g__ExpensesTax1Total__c + c2g__ItemsTax2Total__c  +  c2g__ExpensesTax2Total__c - c2g__ItemsOutputTaxTotal__c - c2g__ExpensesOutputTaxTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>PurchaseInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TriggerPostingError__c</fullName>
        <label>Trigger Posting Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__TriggerPosting__c</fullName>
        <description>The method of trigger-posting a document after its header has been updated.</description>
        <inlineHelpText>This feature allows you to automatically post this document when its header is updated using a trigger. We recommend using the synchronous method unless you want to post a large document, or a document containing many lines, which requires asynchronous posting.</inlineHelpText>
        <label>Trigger Posting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Synchronous</fullName>
                </value>
                <value>
                    <fullName>Asynchronous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VATRegistrationNumber__c</fullName>
        <formula>c2g__Account__r.c2g__CODAVATRegistrationNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__WithholdingExpenseNetTotal__c</fullName>
        <label>Withholding Expense Net Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__NetValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__ExcludeFromWithholding__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPurchaseInvoiceExpenseLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__WithholdingProductNetTotal__c</fullName>
        <label>Withholding Product Net Total</label>
        <summarizedField>c2g__codaPurchaseInvoiceLineItem__c.c2g__NetValue__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPurchaseInvoiceLineItem__c.c2g__ExcludeFromWithholding__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPurchaseInvoiceLineItem__c.c2g__PurchaseInvoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__WithholdingRate__c</fullName>
        <description>The Withholding tax rate.</description>
        <label>Withholding Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__WithholdingTax__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup in the tax codes from purchase invoice for withholding tax details.</description>
        <label>Withholding Tax</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Payable Invoices (Withholding Tax)</relationshipLabel>
        <relationshipName>PurchaseInvoicesWithholdingTax</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__WithholdingTotal__c</fullName>
        <description>The total value of items and expenses on the puchase invoice, applicable for withholding tax.</description>
        <formula>ROUND((((c2g__WithholdingExpenseNetTotal__c + c2g__WithholdingProductNetTotal__c) * BLANKVALUE(c2g__WithholdingRate__c, 0)) / 100) * -1, BLANKVALUE(c2g__InvoiceCurrencyDecimalPlaces__c, 2))</formula>
        <label>Withholding Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbext__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Payable Invoice</label>
    <listViews>
        <fullName>Completed_CIS</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__AccountInvoiceNumber__c</columns>
        <columns>CTPISA__BookingCapture__c</columns>
        <columns>c2g__InvoiceDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__DueDate__c</columns>
        <columns>c2g__InvoiceCurrency__c</columns>
        <columns>c2g__InvoiceTotal__c</columns>
        <columns>c2g__InvoiceStatus__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>c2g__PaymentStatus__c</columns>
        <columns>c2g__OutstandingValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__MatchType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__OwnerCompany__c</field>
            <operation>notContain</operation>
            <value>Inc</value>
        </filters>
        <filters>
            <field>c2g__InvoiceStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed - CIS</label>
    </listViews>
    <listViews>
        <fullName>Completed_CIS_Inc</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__AccountInvoiceNumber__c</columns>
        <columns>CTPISA__BookingCapture__c</columns>
        <columns>c2g__InvoiceDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__DueDate__c</columns>
        <columns>c2g__InvoiceCurrency__c</columns>
        <columns>c2g__InvoiceTotal__c</columns>
        <columns>c2g__InvoiceStatus__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>c2g__PaymentStatus__c</columns>
        <columns>c2g__OutstandingValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__MatchType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__OwnerCompany__c</field>
            <operation>contains</operation>
            <value>Inc</value>
        </filters>
        <filters>
            <field>c2g__InvoiceStatus__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>Completed - CIS, Inc.</label>
    </listViews>
    <listViews>
        <fullName>Discarded_CIS</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__AccountInvoiceNumber__c</columns>
        <columns>CTPISA__BookingCapture__c</columns>
        <columns>c2g__InvoiceDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__DueDate__c</columns>
        <columns>c2g__InvoiceCurrency__c</columns>
        <columns>c2g__InvoiceTotal__c</columns>
        <columns>c2g__InvoiceStatus__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>c2g__PaymentStatus__c</columns>
        <columns>c2g__OutstandingValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__MatchType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__OwnerCompany__c</field>
            <operation>notContain</operation>
            <value>Inc</value>
        </filters>
        <filters>
            <field>c2g__InvoiceStatus__c</field>
            <operation>equals</operation>
            <value>Discarded</value>
        </filters>
        <label>Discarded - CIS</label>
    </listViews>
    <listViews>
        <fullName>Discarded_CIS_Inc</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__AccountInvoiceNumber__c</columns>
        <columns>CTPISA__BookingCapture__c</columns>
        <columns>c2g__InvoiceDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__DueDate__c</columns>
        <columns>c2g__InvoiceCurrency__c</columns>
        <columns>c2g__InvoiceTotal__c</columns>
        <columns>c2g__InvoiceStatus__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>c2g__PaymentStatus__c</columns>
        <columns>c2g__OutstandingValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <columns>c2g__MatchType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__OwnerCompany__c</field>
            <operation>contains</operation>
            <value>Inc</value>
        </filters>
        <filters>
            <field>c2g__InvoiceStatus__c</field>
            <operation>equals</operation>
            <value>Discarded</value>
        </filters>
        <label>Discarded - CIS, Inc.</label>
    </listViews>
</CustomObject>